# hpa-term-project-2022

./: Cargo.toml  Dockerfile  main.copy.txt
src/: main.rs
