[package]
name = "term-proj-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.1"
itertools = "0.10.3"
# ndarray = { version = "0.15.0", features = ["blas"] }
# ndarray = { version = "0.15.0" }
# bit_combi_iter = "1"

[profile.release]
lto = true
panic = "abort"